--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
 
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" />
+
   <link href="%PUBLIC_URL%/assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="%PUBLIC_URL%/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="%PUBLIC_URL%/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
